// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Typing unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble"
  >
    <div
      class="memori-chat--bubble-typing"
    >
      <div
        id="wave"
      >
        <span
          class="dot"
        />
        <span
          class="dot"
        />
        <span
          class="dot"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Typing with custom loading text list unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble"
  >
    <div
      class="memori-chat--bubble-typing"
    >
      <div
        id="wave"
      >
        <span
          class="dot"
        />
        <span
          class="dot"
        />
        <span
          class="dot"
        />
      </div>
      <p />
    </div>
  </div>
</div>
`;

exports[`renders Typing with custom loading text unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble"
  >
    <div
      class="memori-chat--bubble-typing"
    >
      <div
        id="wave"
      >
        <span
          class="dot"
        />
        <span
          class="dot"
        />
        <span
          class="dot"
        />
      </div>
      <p />
    </div>
  </div>
</div>
`;

exports[`renders Typing with default italian loading text unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble"
  >
    <div
      class="memori-chat--bubble-typing"
    >
      <div
        id="wave"
      >
        <span
          class="dot"
        />
        <span
          class="dot"
        />
        <span
          class="dot"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Typing with default loading text unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble"
  >
    <div
      class="memori-chat--bubble-typing"
    >
      <div
        id="wave"
      >
        <span
          class="dot"
        />
        <span
          class="dot"
        />
        <span
          class="dot"
        />
      </div>
    </div>
  </div>
</div>
`;
